<resources>
    <string name="app_name">Invader Controller</string>
    <string name="settings">Settings</string>
    <string name="action_1">↕️</string>
    <string name="action_2">↔️</string>
    <string name="action_3">🌈</string>
    <string name="action_4">💥️</string>
    <string name="action_5">🔮</string>
    <string name="action_6">🚨</string>
    <string name="action_7">✨</string>
    <string name="action_8">⚡</string>
    <string name="action_successful">Action successfully executed</string>
    <string name="action_failed">Action execution failed</string>

    <!-- Settings screen -->
    <string name="ip_address">IP Address</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
</resources>
